-Fixed all auth service.